Checkpoint: sync swagger spec, update icons
