# public/swagger.yml
@@ -3,16 +3,22 @@ info:
   title: NDS Labs Workbench
   description: API for the NDS Labs Workbench service
   contact:
-   email: ndslabs-support@nationaldataservice.org
-   name:  NDS Labs Support
-   url: http://www.nationaldataservice.org/projects/labs.html
+    email: ndslabs-support@nationaldataservice.org
+    name:  NDS Labs Support
+    url: http://www.nationaldataservice.org/projects/labs.html
   version: 1.2.0
 host: localhost:30001
 basePath: /api
 securityDefinitions:
   Bearer:
+    x-apikeyInfoFunc: 'pkg.keycloak.apikey_auth'
     type: apiKey
-    name: Authorization
+    name: X-API-KEY
+    in: header
+  Cookie:
+    x-apikeyInfoFunc: 'pkg.keycloak.cookie_token_auth'
+    type: apiKey
+    name: Cookie
     in: header
 schemes:
   - http
@@ -57,7 +63,8 @@ paths:
     get:
       tags:
         - system
-      operationId: 'getVersion'
+      operationId: 'get_version'
+      x-swagger-router-controller: 'api.v1.system'
       description: |
         Retrieve the server version
       responses:
@@ -69,7 +76,8 @@ paths:
     post:
       tags:
         - user account
-      operationId: 'postAuthenticate'
+      operationId: 'post_authenticate'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Authenticate a user (login)
       parameters:
@@ -85,27 +93,27 @@ paths:
           schema:
             $ref: '#/definitions/Token'
         '401':
-          description: Not logged in
+          description: Invalid credentials
     delete:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - user account
-      operationId: 'deleteAuthenticate'
+      operationId: 'delete_authenticate'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Logout a user
       responses:
-        '200':
-          description: OK
-          schema:
-            $ref: '#/definitions/Token'
+        '204':
+          description: Logout successful
   /refresh_token:
     get:
       security:
         - Bearer: []
       tags:
         - user account
-      operationId: 'refreshToken'
+      operationId: 'refresh_token'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Refresh the JWT token
       responses:
@@ -121,7 +129,8 @@ paths:
         - Bearer: []
       tags:
         - user account
-      operationId: 'checkToken'
+      operationId: 'check_token'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Validate the JWT token
       parameters:
@@ -140,7 +149,8 @@ paths:
     get:
       tags:
         - app spec
-      operationId: 'listServices'
+      operationId: 'list_services'
+      x-swagger-router-controller: 'api.v1.app_specs'
       description: |
         Retrieves a site-wide list of available service definitions.
       parameters:
@@ -158,10 +168,11 @@ paths:
               $ref: '#/definitions/Service'
     post:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - app spec
-      operationId: 'createService'
+      operationId: 'create_service'
+      x-swagger-router-controller: 'api.v1.app_specs'
       description: |
         Adds a new service to the service library
       parameters:
@@ -179,10 +190,11 @@ paths:
       - $ref: '#/parameters/service-id'
     get:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - app spec
-      operationId: 'getServiceById'
+      operationId: 'get_service_by_id'
+      x-swagger-router-controller: 'api.v1.app_specs'
       description: |
         Retrieves the service definition.
       responses:
@@ -192,10 +204,11 @@ paths:
             $ref: '#/definitions/Service'
     put:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - app spec
-      operationId: 'updateService'
+      operationId: 'update_service'
+      x-swagger-router-controller: 'api.v1.app_specs'
       description: |
         Updates a service definition in the service library
       parameters:
@@ -210,10 +223,11 @@ paths:
           description: Updated
     delete:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - app spec
-      operationId: 'deleteService'
+      operationId: 'delete_service'
+      x-swagger-router-controller: 'api.v1.app_specs'
       description: |
         Delete a service
       responses:
@@ -225,7 +239,8 @@ paths:
         - Bearer: []
       tags:
         - user account
-      operationId: 'listAccounts'
+      operationId: 'list_accounts'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Retrieves a site-wide list of NDSLabs accounts.
       responses:
@@ -242,7 +257,8 @@ paths:
         - Bearer: []
       tags:
         - user account
-      operationId: 'createAccount'
+      operationId: 'create_account'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Adds a new accounts
       parameters:
@@ -260,10 +276,11 @@ paths:
       - $ref: '#/parameters/account-id'
     get:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - user account
-      operationId: 'getAccountById'
+      operationId: 'get_account_by_id'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Retrieves basic information about a account.
       responses:
@@ -276,7 +293,8 @@ paths:
         - Bearer: []
       tags:
         - user account
-      operationId: 'updateAccount'
+      operationId: 'update_account'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Updates account information
       parameters:
@@ -294,7 +312,8 @@ paths:
         - Bearer: []
       tags:
         - user account
-      operationId: 'deleteAccount'
+      operationId: 'delete_account'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Delete a account
       responses:
@@ -303,10 +322,11 @@ paths:
   /stacks:
     get:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - user app
-      operationId: 'listStacks'
+      operationId: 'list_stacks'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Retrieves a list of stacks for this account.
       responses:
@@ -320,10 +340,11 @@ paths:
           description: Not found
     post:
       security:
-        - Bearer: []
+        - Cookie: []
       tags:
         - user app
-      operationId: 'createStack'
+      operationId: 'create_stack'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Adds a new stack to this account
       parameters:
@@ -344,7 +365,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'getStackById'
+      operationId: 'get_stack_by_id'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Retrieves the stack definition.
       responses:
@@ -357,7 +379,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'updateStack'
+      operationId: 'update_stack'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Updates stack information
       parameters:
@@ -375,7 +398,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'deleteStack'
+      operationId: 'delete_stack'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Delete a stack
       responses:
@@ -389,7 +413,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'renameStack'
+      operationId: 'rename_stack'
+      x-swagger-router-controller: 'api.v1.user_apps'
       parameters:
         - name: name
           description: Stack name
@@ -410,7 +435,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'getStackServiceLogs'
+      operationId: 'get_stack_service_logs'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Retrieves the stack service log.
       responses:
@@ -430,7 +456,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'quickstartStack'
+      operationId: 'quickstart_stack'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Adds, starts, and navigates to the specified application
       responses:
@@ -448,7 +475,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'startStack'
+      operationId: 'start_stack'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Starts the specified stack
       responses:
@@ -462,7 +490,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'stopStack'
+      operationId: 'stop_stack'
+      x-swagger-router-controller: 'api.v1.user_apps'
       description: |
         Stops the specified stack
       responses:
@@ -474,7 +503,8 @@ paths:
         - Bearer: []
       tags:
         - user app
-      operationId: 'getStackConfigs'
+      operationId: 'get_stack_configs'
+      x-swagger-router-controller: 'api.v1.user_apps'
       parameters:
         - name: services
           in: query
@@ -497,7 +527,8 @@ paths:
     get:
       tags:
         - user account
-      operationId: 'validateOAuthToken'
+      operationId: 'validate_o_auth_token'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Check if the user has an active/valid OAuth session
       responses:
@@ -511,7 +542,8 @@ paths:
     post:
       tags:
         - user account
-      operationId: 'registerUser'
+      operationId: 'register_user'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Register
       parameters:
@@ -528,7 +560,8 @@ paths:
     get:
       tags:
         - vocabulary
-      operationId: 'getVocabularyByName'
+      operationId: 'get_vocabulary_by_name'
+      x-swagger-router-controller: 'api.v1.vocabulary'
       parameters:
         - $ref: '#/parameters/vocab-name'
       description: |
@@ -545,7 +578,8 @@ paths:
         - Bearer: []
       tags:
         - user account
-      operationId: 'changePassword'
+      operationId: 'change_password'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       parameters:
         - name: password
           description: Change password object
@@ -565,7 +599,8 @@ paths:
     put:
       tags:
         - user account
-      operationId: 'verifyEmailAddress'
+      operationId: 'verify_email_address'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       parameters:
         - name: verify
           description: Verification object
@@ -595,7 +630,8 @@ paths:
         - Bearer: []
       tags:
         - user account
-      operationId: 'sendResetPasswordEmail'
+      operationId: 'send_reset_password_email'
+      x-swagger-router-controller: 'api.v1.user_accounts'
       description: |
         Request password reset email.
       responses:
@@ -607,7 +643,8 @@ paths:
         - Bearer: []
       tags:
         - support
-      operationId: 'submitHelpRequest'
+      operationId: 'submit_help_request'
+      x-swagger-router-controller: 'api.support'
       description: |
         Submit a support request
       parameters:
@@ -624,7 +661,8 @@ paths:
     get:
       tags:
         - support
-      operationId: 'getContactInfo'
+      operationId: 'get_contact_info'
+      x-swagger-router-controller: 'api.support'
       description: |
         Get contact information
       responses:
@@ -651,6 +689,23 @@ definitions:
       name:
         type: string
   Service:
+    x-groupName: "ndslabs.org"
+    x-version: "v1"
+    x-scope: "Cluster"
+    x-shortNames:
+      - workbenchspec
+      - workbenchspecs
+      - wbappspec
+      - wbappspecs
+      - appspec
+      - appspecs
+      - wbspec
+      - wbspecs
+      - spec
+      - specs
+    x-singular: "workbenchappspec"
+    x-plural: "workbenchappspecs"
+    x-kind: "WorkbenchAppSpec"
     type: object
     properties:
       id:
@@ -664,6 +719,8 @@ definitions:
       maintainer:
         type: string
       logo:
+        type: string
+      info:
         type: string
       display:
         type: string
@@ -726,6 +783,8 @@ definitions:
   ReadyProbe:
     type: object
     properties:
+      type:
+        type: string
       path:
         type: string
       port:
@@ -744,6 +803,8 @@ definitions:
   Repository:
     type: object
     properties:
+      type:
+        type: string
       port:
         type: string
       url:
@@ -795,12 +856,31 @@ definitions:
           storage:
             type: string
   Stack:
+    x-groupName: "ndslabs.org"
+    x-version: "v1"
+    x-plural: "workbenchuserapps"
+    x-singular: "workbenchuserapp"
+    x-kind: "WorkbenchUserApp"
+    x-scope: "Namespaced"
+    x-shortNames:
+      - workbenchapp
+      - workbenchapps
+      - wbuserapp
+      - wbuserapps
+      - userapp
+      - userapps
+      - wbapp
+      - wbapps
+      - app
+      - apps
     type: object
     properties:
       id:
         type: string
       key:
         type: string
+      secure:
+        type: boolean
       name:
         type: string
       services:
@@ -811,7 +891,7 @@ definitions:
         type: string
       action:
         type: string
-      createTime:
+      createdTime:
         type: integer
       updateTime:
         type: integer
@@ -824,11 +904,15 @@ definitions:
         type: string
       stack:
         type: string
+      createdTime:
+        type: integer
+      updateTime:
+        type: integer
       service:
         type: string
       status:
         type: string
-      statusMessage:
+      statusMessages:
         type: array
         items:
           type: string
@@ -839,10 +923,12 @@ definitions:
         additionalProperties:
           type: string
         default: {}
+      internalIP:
+        type: string
       readinessProbe:
         $ref: '#/definitions/ReadyProbe'
-      image:
-        $ref: '#/definitions/ServiceImage'
+      imageTag:
+        type: string
       resourceLimits:
         $ref: '#/definitions/ResourceLimits'
       volumeMounts:
@@ -850,26 +936,28 @@ definitions:
         additionalProperties:
           type: string
         default: {}
+      ports:
+        type: object
+        additionalProperties:
+          type: integer
+        default: {}
       endpoints:
         type: array
         items:
           type: object
           properties:
-            internalIP:
-              type: string
             host:
               type: string
-            ports:
-              type: array
-              items:
-                type: object
-              properties:
-                port:
-                  type: integer
-                nodePort:
-                  type: integer
-                protocol:
-                  type: string
+            path:
+              type: string
+            url:
+              type: string
+            port:
+              type: integer
+            nodePort:
+              type: integer
+            protocol:
+              type: string
     required:
       - stack
       - service
@@ -896,6 +984,8 @@ definitions:
   ServiceImage:
     type: object
     properties:
+      registry:
+        type: string
       name:
         type: string
       tags:
