# src/common/services/openapi/v1/models/ServiceImage.ts
@@ -3,6 +3,7 @@
 /* eslint-disable */
 
 export type ServiceImage = {
+    registry?: string;
     name?: string;
     tags?: Array<string>;
 }
