# src/common/services/openapi/v1/models/Stack.ts
@@ -7,10 +7,11 @@ import type { StackService } from './StackService';
 export type Stack = {
     id?: string;
     key: string;
+    secure?: boolean;
     name?: string;
     services?: Array<StackService>;
     status?: string;
     action?: string;
-    createTime?: number;
+    createdTime?: number;
     updateTime?: number;
 }
