# src/common/services/openapi/v1/schemas/$ServiceImage.ts
@@ -3,6 +3,9 @@
 /* eslint-disable */
 export const $ServiceImage = {
     properties: {
+        registry: {
+            type: 'string',
+        },
         name: {
             type: 'string',
         },
